--- a/app.json
+++ b/app.json
@@ -54,7 +54,7 @@
     },
     "API_SECRET": {
       "description": "A passphrase that must be at least 12 characters long. Avoid 'special' characters, which can cause problems in some cases.",
-      "value": "",
+      "value": "tNqMYIvzMep6",
       "required": true
     },
     "BG_HIGH": {
