--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "env": {
     "MONGODB_URI": {
       "description": "The MongoDB Connection String to connect to your MongoDB cluster. If you don't have this from MongoDB Atlas, please re-read installation instructions at http://nightscout.github.io/nightscout/new_user/ before continuing",
-      "value": "mongodb+srv://nightscout-remote-monitor:bYL1TsfVxksgICWS@cluster0.yeq836o.mongodb.net/gorg?retryWrites=true&w=majority",
+      "value": "mongodb+srv://nightscout:jWmy0fGpd0Ye80cb@cluster0.yeq836o.mongodb.net/gorg?retryWrites=true&w=majority",
       "required": true
     },
     "ALARM_HIGH": {
